tests/paczka1/fuzzy1/76989816.err
Error in line 19: wzheNK16D A882 94,4
Error in line 37: iKA A21 83,13
Error in line 32: zMW5wEDjUfc A21 36,7
